--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 name: _Website Trials
 basepath: /_WebsiteTrials
-permalink: /_WebsiteTrials/blog/:year/:month/:day/:title
+permalink: /blog/:year/:month/:day/:title
